# isb

lab1-var11/: .gitignore  functions.py  main.py  requirements.txt  settings.json
lab1-var11/task1/: alphabets.json  encrypted_text.txt  key.json  plain_text.txt  vigenere.py
lab1-var11/task2/: decrypted_text.txt  freq_decod.py  frequenceFile.json  frequenceRu.json  mappingFileToRu.json
lab2-var11/: requirements.txt
lab2-var11/src/: client.py
lab2-var11/src/client/: App.py  client.py  func.py  main.py  parcer.py  sequences.json  settings.json  tests.py  urls.json
lab2-var11/src/generators/: data.json  settings.json
lab2-var11/src/generators/c++/: CMakeLists.txt  func.cpp  server.cpp
lab2-var11/src/generators/java/gpsch/src/: JsonServer.java
lab3-var11/: .gitignore  decription.py  encryption.py  file_work.py  key_generation.py  main.py
lab3-var11/console_app/: App.py
lab3-var11/crypto_system/: Asymmetric.py  Symmetric.py  file_work.py  key_generation.py
lab3-var11/settings/: encrypt_symmetric_key.txt  keys.json  private_key.txt  public_key.txt  settings.json
lab3-var11/texts/: decrypted.txt  encrypted.txt  plain.txt
lab4-var11/: main.py  settings.json
lab4-var11/app/: App.py
lab4-var11/task/: CrackHash.py  file_work.py  find_collision.py  time_meter.py  time_results.json  visualization.py
